...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/item_cover_iv"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@{@string/contentalbum(album.name,album.albumId)}"
                    tools:srcCompat="@drawable/ic_album" />

...
