...
    tools:context=".ui.MusicianFragment"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="roboto"
        android:textStyle="bold"
        android:text="@string/tiartistas"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="?attr/colorOnSecondary"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/musicians_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/musician_item" />

...
