...
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_cover_iv"
                android:contentDescription="@string/btnasociar"/>

            <TextView
                android:id="@+id/textGeneroTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="roboto"
                android:gravity="start"
                android:text="@string/genero_title"
                android:textSize="16sp"
...
                app:layout_constraintHorizontal_bias="0.084"
                app:layout_constraintLeft_toLeftOf="@id/guideline1"
                app:layout_constraintRight_toRightOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/btn_tracks" />

            <TextView
                android:id="@+id/textGeneroValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="roboto"
                android:text="@{album.genre}"
                android:textSize="16sp"
...
