<resources>
    <string-array name="musicGenres">
        <item>Classical</item>
        <item>Rock</item>
        <item>Salsa</item>
        <item>Folk</item>
    </string-array>

    <string-array name="recordLabels">
        <item>Sony Music</item>
        <item>EMI</item>
        <item>Discos Fuentes</item>
        <item>Elektra</item>
        <item>Fania Records</item>
    </string-array>
</resources>